--- a/Project3/public_html/index.html
+++ b/Project3/public_html/index.html
@@ -16,7 +16,7 @@
         <!-- DO NOT CHANGE ANYTHING ABOVE THIS LINE-->
 
         <!-- Angular (ADD HERE) -->
-
+        <script src="js/angular.min.js"></script>
 
     </head>
 
