--- a/Project3/public_html/index.html
+++ b/Project3/public_html/index.html
@@ -20,17 +20,17 @@
 
     </head>
 
-    <body>
+    <body ng-app="IS219Gallery">
 
-        <div class="header">
+        <div class="header" ng-controller="HomeController">
 
             <div class="container">
-                <h1 id="app_title">%title%</h1>
+                <h1 id="app_title">{{ title }}</h1>
             </div>
 
         </div>
 
-        <div class="main">
+        <div class="main" ng-controller="HomeController">
 
             <div class="container">
 
@@ -56,10 +56,10 @@
             </div>
         </div>
 
-        <div class="footer">
+        <div class="footer" ng-controller="HomeController">
             <div class="container">
-                <a id="github" class="btn btn-lg btn-warning">
-                    <i class="fa fa-lg fa-github pull-left" aria-hidden="true"></i> %owner% %github%
+                <a id="github" class="btn btn-lg btn-warning" ng-href="{{ github }}">
+                    <i class="fa fa-lg fa-github pull-left" aria-hidden="true"></i> {{ owner }} | Github
                 </a>
             </div>
         </div>
