--- a/Project3/public_html/index.html
+++ b/Project3/public_html/index.html
@@ -37,8 +37,7 @@
                 <div class="col-md-6"> 
                     <div class="thumbnail">
 
-                        <img class="poster" />
-                        <div class="imageInfo"> {{ movies[0].posters[0] }} </div>
+                        <div class="imageInfo" > <img ng-src="{{ movies[0].posters[0] }}"/></div>
 
                         <p class="title"> {{ movies[0].title }} ({{ movies[0].country }}) </p> 
                         <p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[0].iscore }} </p>
