--- a/Project3/public_html/index.html
+++ b/Project3/public_html/index.html
@@ -39,11 +39,11 @@
                         <div class="thumbnail">
 
                             <img ng-click="posterClick(i)"  class="poster" ng-src=" {{movies[i].posters[movies[i].posterindex]}}"/>
-                            <div class="imageInfo">Poster {{movies[i].poster + 1}} of {{movie[i].poster.length}} </div>
+                            <div class="imageInfo">Poster {{movies[i].posterindex + 1}} of {{movies[i].posters.length}} </div>
 
                             <p class="title"> {{ movies[i].title}} ({{ movies[i].country}}) </p> 
                             <p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[i].iscore}} </p>
-                            <p class="runtime">Runtime: {{ movies[i].runtime}} </p> 
+                            <p class="runtime">Runtime: {{ timeText(movies[i].runtime) }} </p> 
                             <p class="released">Released: {{ movies[i].released | date }} | Rated: {{ movies[i].rating}} </p>
                             <p class="websites">Websites: <a id="imdb" ng-href="{{ movies[i].imdb}}"> IMDB </a> | <a id="website" ng-href="{{ movies[i].website}}"> Website </a></p>
 
