--- a/Project3/public_html/index.html
+++ b/Project3/public_html/index.html
@@ -62,7 +62,7 @@
                         <div class="thumbnail">
 
                             <img ng-click="posterClick(i)"  class="poster" ng-src=" {{movies[i].posters[movies[i].posterindex]}}"/>
-                            <div class="imageInfo">Poster {{movies[i].poster + 1}} of {{movie[i].poster.length}} </div>
+                            <div class="imageInfo">Poster {{movies[i].posterindex + 1}} of {{movies[i].posters.length}} </div>
 
                             <p class="title"> {{ movies[i].title}} ({{ movies[i].country}}) </p> 
                             <p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[i].iscore}} </p>
